app/components/Notifications/Notifications.module.scss
@import '../../globals.scss';

.notifications {
    grid-area: video;
    z-index: 1;
    pointer-events: none;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    position: relative;
    
    .notification {
        background: $light;
        clip-path: polygon(0% 0%, 0% 0%, 0% 100%, 0% 100%);
        transition: clip-path .6s ease, max-height .6s ease .6s;
        z-index: 10;
        font-size: .8rem;
        max-height: 0px;
        overflow: hidden;

        &.visible {
            clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
            max-height: 100px;
            transition: clip-path .6s ease .6s, max-height .6s ease;
        }    
        p {
            color: $dark;
            margin: 0px $space 0px $space;
            &:first-child {
                margin-top: $space/2;
            }
            &:last-child {
                margin-bottom: $space;
            }
        }
        h4 {
            color: $primary;
            text-transform: uppercase;
            margin: $space $space 0px $space;
            &:last-child {
                margin-bottom: $space;
            }
        }
    }
}

